--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
 .idea
+.vscode
+
+build
+
+# TODO.
+# Output of the go covetage tool
+#*.out
+#
+## Test binary `go test -c`
+#*.test
+#!.env.test
+
+## docker tmp files
+#build/docker/.env
+#
+#.git
+#bin/*
+#
+#tmp/*
+#!tmp/.keep
+#
+#.tmp/*
+#!.tmp/.keep
