--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 HTTP_PORT="5000"
-HELLO="WORLD"
+DB_HOST = "localhost"
+DB_PORT = "5490"
+DB_USER = "username"
+DB_PASSWORD = "secret"
+DB_DBNAME = "delivery"
+DB_SSLMODE="disable"
+
+DOCKER_DB_EXPOSED_PORT=5490
+DOCKER_TEST_DB_EXPOSED_PORT=5491
